--- a/index.html
+++ b/index.html
@@ -90,6 +90,37 @@
     </div>
   </section>
 
+  <!-- ⭐ NEW METRICS SECTION -->
+  <section id="why" class="metrics">
+    <div class="wrap">
+      <h2 class="center">Why Work With Silent Equity</h2>
+      <p class="muted center">
+        Modern systems, clear communication, and builds designed to scale with you.
+      </p>
+
+      <div class="metrics-grid">
+        <div class="metric">
+          <div class="metric-number">99%</div>
+          <div class="metric-label">Projects Delivered On-Scope*</div>
+        </div>
+        <div class="metric">
+          <div class="metric-number">25+</div>
+          <div class="metric-label">Systems & SOPs Productized*</div>
+        </div>
+        <div class="metric">
+          <div class="metric-number">5–10x</div>
+          <div class="metric-label">More Visibility vs. Spreadsheets*</div>
+        </div>
+        <div class="metric">
+          <div class="metric-number">24/7</div>
+          <div class="metric-label">Automations Working For You</div>
+        </div>
+      </div>
+
+      <p class="fineprint center">*Sample figures shown as placeholders.</p>
+    </div>
+  </section>
+
   <section id="packages" class="packages">
     <div class="wrap">
       <h2 class="center">Cinematic Content Systems</h2>
@@ -129,7 +160,7 @@
           <p class="muted">Full cinematic universe with direction and priority edits.</p>
           <ul class="ticks">
             <li>30+ videos monthly</li>
-            <li>Story arcs &amp; direction</li>
+            <li>Story arcs & direction</li>
             <li>Trailer + promo polish</li>
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
@@ -145,7 +176,7 @@
       <p class="muted center">Pick the automation engine that matches your operations. Upgrade anytime.</p>
 
       <div class="cards">
-        <!-- SilentStart CRM Engine -->
+        <!-- your existing CRM cards here -->
         <div class="card">
           <div class="row space">
             <h3>SilentStart CRM Engine</h3>
@@ -153,22 +184,15 @@
           </div>
           <p class="muted">Foundation CRM to get you out of spreadsheets and into a clean, trackable system.</p>
           <ul class="ticks">
-            <li>Custom CRM dashboard &amp; pipelines</li>
-            <li>Lead &amp; client management</li>
+            <li>Custom CRM dashboard & pipelines</li>
+            <li>Lead & client management</li>
             <li>Calendar + booking workflows</li>
             <li>Central inbox for email/SMS</li>
             <li>Starter AI receptionist agent</li>
           </ul>
-          <a
-            class="btn primary block"
-            target="_blank"
-            href="https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04"
-          >
-            Select SilentStart — $2,500
-          </a>
+          <a class="btn primary block" target="_blank" href="#">Select SilentStart — $2,500</a>
         </div>
 
-        <!-- SilentScale Automation System (featured like Standard) -->
         <div class="card featured">
           <div class="row space">
             <h3>SilentScale Automation System</h3>
@@ -179,46 +203,28 @@
             <li>Everything in SilentStart</li>
             <li>Multi-step automations from your SOPs</li>
             <li>Email + SMS nurture journeys</li>
-            <li>Automated onboarding &amp; offboarding</li>
+            <li>Automated onboarding & offboarding</li>
             <li>Upgraded AI receptionist with routing</li>
           </ul>
-          <a
-            class="btn primary block"
-            target="_blank"
-            href="https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05"
-          >
-            Select SilentScale — $4,500
-          </a>
+          <a class="btn primary block" target="_blank" href="#">Select SilentScale — $4,500</a>
         </div>
 
-        <!-- SilentEmpire AI Infrastructure -->
         <div class="card">
           <div class="row space">
             <h3>SilentEmpire AI Infrastructure</h3>
             <div class="price">$7,500</div>
           </div>
-          <p class="muted">Your full AI &amp; automation stack: CRM, marketing engine, and internal assistants.</p>
+          <p class="muted">Your full AI & automation stack: CRM, marketing engine, and internal assistants.</p>
           <ul class="ticks">
-            <li>Everything in SilentStart &amp; SilentScale</li>
+            <li>Everything in SilentStart & SilentScale</li>
             <li>AI-driven client journey orchestration</li>
             <li>AI receptionist + lead qualification</li>
-            <li>Social &amp; nurture automation integrations</li>
+            <li>Social & nurture automation integrations</li>
             <li>Internal AI assistant for your team</li>
           </ul>
-          <a
-            class="btn primary block"
-            target="_blank"
-            href="https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06"
-          >
-            Select SilentEmpire — $7,500
-          </a>
+          <a class="btn primary block" target="_blank" href="#">Select SilentEmpire — $7,500</a>
         </div>
       </div>
-
-      <p class="fineprint">
-        By purchasing, you agree to the terms in the Silent Equity Business Agreement.
-        Systems are customized for your operations. Silent Equity retains internal engine &amp; prompt IP.
-      </p>
     </div>
   </section>
 
@@ -227,17 +233,14 @@
       <div>
         <h2>The Viral Script System (Add-On)</h2>
         <p class="muted">
-          Your personal AI filmmaking assistant, connected to your systems. Generate Veo3-style scripts, hooks, and scenes without reinventing the wheel—so content keeps flowing while your operations stay organized.
+          Your personal AI filmmaking assistant, connected to your systems.
         </p>
         <ul class="ticks">
           <li>Built-in hooks, timing, and pacing</li>
           <li>Character voice + POV templates</li>
           <li>Shot structure &amp; scene direction</li>
         </ul>
-        <div class="row gap">
-          <a class="btn primary" target="_blank" href="https://buy.stripe.com/3cI4gz2Reea34m93fK18c03">Get System — $20/mo</a>
-        </div>
-        <p class="fineprint">After purchase, set your Stripe Payment Link to redirect to <code>/delivery.html</code> on your domain. That page will automatically open the access link in a new tab and show onboarding steps.</p>
+        <a class="btn primary" target="_blank" href="#">Get System — $20/mo</a>
       </div>
       <div class="panel">
         <h3>What You Get</h3>
@@ -250,19 +253,62 @@
     </div>
   </section>
 
+  <!-- ⭐ NEW TESTIMONIALS SECTION -->
+  <section id="testimonials" class="testimonials">
+    <div class="wrap">
+      <h2 class="center">What Clients Say</h2>
+      <p class="muted center">Sample testimonials shown for layout demonstration.</p>
+
+      <div class="cards testimonials-grid">
+        
+        <div class="card testimonial-card">
+          <div class="testimonial-header">
+            <div class="testimonial-name">Jordan Reyes</div>
+            <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+          </div>
+          <div class="time muted">a month ago</div>
+          <p class="testimonial-text">
+            “Silent Equity transformed my operations. Automations work 24/7 and I always know exactly where every lead is.”
+          </p>
+        </div>
+
+        <div class="card testimonial-card">
+          <div class="testimonial-header">
+            <div class="testimonial-name">Ashley Coleman</div>
+            <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+          </div>
+          <div class="time muted">a year ago</div>
+          <p class="testimonial-text">
+            “Before Silent Equity, everything was scattered. Now my CRM, calls, onboarding, and reporting flow perfectly.”
+          </p>
+        </div>
+
+        <div class="card testimonial-card">
+          <div class="testimonial-header">
+            <div class="testimonial-name">Marcus Lee</div>
+            <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+          </div>
+          <div class="time muted">a few weeks ago</div>
+          <p class="testimonial-text">
+            “The AI receptionist alone saved me hours every week. Clients get instant replies even when I’m offline.”
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <section id="contact" class="contact">
     <div class="wrap grid">
       <div>
         <h2>Start Your System Build</h2>
         <p class="muted">
           Tell us about your business, current tools, and where things feel messy.
-          We’ll reply with next steps and a short Loom overview of your recommended system.
         </p>
         <div class="row gap">
           <a class="btn ghost" href="mailto:tytechinvestmentsllc@gmail.com">Email Us</a>
           <a class="btn" href="#crm">Choose a System</a>
         </div>
-        <p class="fineprint">Prefer not to show a phone number publicly. Business line available upon request.</p>
       </div>
       <div class="panel soft">
         <form action="https://formsubmit.co/tytechinvestmentsllc@gmail.com" method="POST">
@@ -271,22 +317,21 @@
           <input type="hidden" name="_next" value="thankyou.html">
           <label>Name<input name="Name" required></label>
           <label>Email<input name="Email" type="email" required></label>
-          <label>Project<textarea name="Message" rows="4" placeholder="Current setup, tools you use, bottlenecks, and goals for the next 6–12 months" required></textarea></label>
+          <label>Project<textarea name="Message" rows="4" required></textarea></label>
           <button type="submit" class="btn primary block">Send Inquiry</button>
         </form>
       </div>
     </div>
   </section>
 
-
   <footer class="foot">
     <div class="wrap row space">
-      <div>© <span id="y"></span> Silent Equity LLC — AI Systems &amp; Automation</div>
+      <div>© <span id="y"></span> Silent Equity LLC — AI Systems & Automation</div>
       <div class="muted">Built for precision, continuity, and scale.</div>
     </div>
   </footer>
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+
 </body>
 </html>
-
