--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <header class="nav">
     <div class="wrap row">
-      <a href="#top" class="brand">
-        <img src="assets/logo.png" alt="Silent Equity logo" class="logo">
-        <span>Silent Equity</span>
+         <a href="#top" class="brand">
+       <a href="#top" class="brand">
+        <img src="assets/Silent Equity Logo.png" alt="SilentEquity logo" class="logo">
       </a>
       <nav>
         <a href="#about">About</a>
