--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrap row">
          <a href="#top" class="brand">
        <a href="#top" class="brand">
-        <img src="assets/Silent Equity Logo.png" alt="SilentEquity logo" class="logo">
+      <img src="assets/silentequity-logo.png" alt="SilentEquity logo" class="logo">
       </a>
       <nav>
         <a href="#about">About</a>
