--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 <body>
   <header class="nav">
     <div class="wrap row">
-         <a href="#top" class="brand">
        <a href="#top" class="brand">
-      <img src="assets/silentequity-logo.png" alt="SilentEquity logo" class="logo">
+  <div class="logo-mark">
+    <span class="logo-bar"></span>
+    <span class="logo-bar"></span>
+    <span class="logo-bar"></span>
+  </div>
+  <span class="logo-wordmark">SilentEquity</span>
+</a>
       </a>
       <nav>
         <a href="#about">About</a>
