--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   <link rel="stylesheet" href="site.css">
 </head>
 <body>
+
   <header class="nav">
     <div class="wrap row">
-       <a href="#top" class="brand">
-  <div class="logo-mark">
-    <span class="logo-bar"></span>
-    <span class="logo-bar"></span>
-    <span class="logo-bar"></span>
-  </div>
-  <span class="logo-wordmark">SilentEquity</span>
-</a>
+      <a href="#top" class="brand">
+        <div class="logo-mark">
+          <span class="logo-bar"></span>
+          <span class="logo-bar"></span>
+          <span class="logo-bar"></span>
+        </div>
+        <span class="logo-wordmark">SilentEquity</span>
       </a>
+
       <nav>
         <a href="#about">About</a>
         <a href="#packages">Content Systems</a>
@@ -43,6 +44,7 @@
           <a class="btn ghost" href="#contact">Book a Call</a>
         </div>
       </div>
+
       <div class="panel">
         <h3>What We Build</h3>
         <ul class="bullets">
@@ -71,6 +73,7 @@
           Whether you’re just getting out of spreadsheets or replacing a broken tech stack, Silent Equity gives you one clear system to run leads, clients, and delivery from end to end.
         </p>
       </div>
+
       <div class="panel soft">
         <h3>Core Principles</h3>
         <div class="cols">
@@ -95,13 +98,10 @@
     </div>
   </section>
 
-  <!-- ⭐ NEW METRICS SECTION -->
   <section id="why" class="metrics">
     <div class="wrap">
       <h2 class="center">Why Work With Silent Equity</h2>
-      <p class="muted center">
-        Modern systems, clear communication, and builds designed to scale with you.
-      </p>
+      <p class="muted center">Modern systems, clear communication, and builds designed to scale with you.</p>
 
       <div class="metrics-grid">
         <div class="metric">
@@ -130,6 +130,7 @@
     <div class="wrap">
       <h2 class="center">Cinematic Content Systems</h2>
       <p class="muted center">Locked-in visual identity and content systems for short-form video. Upgrade anytime.</p>
+
       <div class="cards">
         <div class="card">
           <div class="row space">
@@ -144,6 +145,7 @@
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/3cI28rdvS0jdg4R8A418c00">Select Basic — $1,000</a>
         </div>
+
         <div class="card featured">
           <div class="row space">
             <h3>Standard</h3>
@@ -157,6 +159,7 @@
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/5kQ4gz4Zm5Dx19XcQk18c01">Subscribe — $1,500/mo</a>
         </div>
+
         <div class="card">
           <div class="row space">
             <h3>Premium</h3>
@@ -171,17 +174,18 @@
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
         </div>
       </div>
+
       <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
 
   <section id="crm" class="packages">
     <div class="wrap">
-      <h2 class="center">CRM &amp; Automation Systems</h2>
+      <h2 class="center">CRM & Automation Systems</h2>
       <p class="muted center">Pick the automation engine that matches your operations. Upgrade anytime.</p>
 
       <div class="cards">
-        <!-- your existing CRM cards here -->
+
         <div class="card">
           <div class="row space">
             <h3>SilentStart CRM Engine</h3>
@@ -195,7 +199,7 @@
             <li>Central inbox for email/SMS</li>
             <li>Starter AI receptionist agent</li>
           </ul>
-          <a class="btn primary block" target="_blank" href="#">Select SilentStart — $2,500</a>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04">Select SilentStart — $2,500</a>
         </div>
 
         <div class="card featured">
@@ -211,7 +215,7 @@
             <li>Automated onboarding & offboarding</li>
             <li>Upgraded AI receptionist with routing</li>
           </ul>
-          <a class="btn primary block" target="_blank" href="#">Select SilentScale — $4,500</a>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05">Select SilentScale — $4,500</a>
         </div>
 
         <div class="card">
@@ -227,8 +231,9 @@
             <li>Social & nurture automation integrations</li>
             <li>Internal AI assistant for your team</li>
           </ul>
-          <a class="btn primary block" target="_blank" href="#">Select SilentEmpire — $7,500</a>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06">Select SilentEmpire — $7,500</a>
         </div>
+
       </div>
     </div>
   </section>
@@ -237,16 +242,15 @@
     <div class="wrap grid">
       <div>
         <h2>The Viral Script System (Add-On)</h2>
-        <p class="muted">
-          Your personal AI filmmaking assistant, connected to your systems.
-        </p>
+        <p class="muted">Your personal AI filmmaking assistant, connected to your systems.</p>
         <ul class="ticks">
           <li>Built-in hooks, timing, and pacing</li>
           <li>Character voice + POV templates</li>
-          <li>Shot structure &amp; scene direction</li>
+          <li>Shot structure & scene direction</li>
         </ul>
-        <a class="btn primary" target="_blank" href="#">Get System — $20/mo</a>
+        <a class="btn primary" target="_blank" href="https://buy.stripe.com/3cI4gz2Reea34m93fK18c03">Get System — $20/mo</a>
       </div>
+
       <div class="panel">
         <h3>What You Get</h3>
         <ul class="bullets">
@@ -258,14 +262,13 @@
     </div>
   </section>
 
-  <!-- ⭐ NEW TESTIMONIALS SECTION -->
   <section id="testimonials" class="testimonials">
     <div class="wrap">
       <h2 class="center">What Clients Say</h2>
-      <p class="muted center">Sample testimonials shown for layout demonstration.</p>
+      <p class="muted center">Sample testimonials are for layout use only.</p>
 
       <div class="cards testimonials-grid">
-        
+
         <div class="card testimonial-card">
           <div class="testimonial-header">
             <div class="testimonial-name">Jordan Reyes</div>
@@ -307,14 +310,13 @@
     <div class="wrap grid">
       <div>
         <h2>Start Your System Build</h2>
-        <p class="muted">
-          Tell us about your business, current tools, and where things feel messy.
-        </p>
+        <p class="muted">Tell us about your business, current tools, and where things feel messy.</p>
         <div class="row gap">
           <a class="btn ghost" href="mailto:tytechinvestmentsllc@gmail.com">Email Us</a>
           <a class="btn" href="#crm">Choose a System</a>
         </div>
       </div>
+
       <div class="panel soft">
         <form action="https://formsubmit.co/tytechinvestmentsllc@gmail.com" method="POST">
           <input type="hidden" name="_subject" value="Silent Equity — New Inquiry">
@@ -336,7 +338,10 @@
     </div>
   </footer>
 
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 
 </body>
 </html>
+
