--- a/index.html
+++ b/index.html
@@ -376,3 +376,17 @@
     </div>
   </div>
 </footer>
+  <script>
+function toggleMenu() {
+  const nav = document.getElementById('mobileNav');
+  nav.classList.toggle('open');
+}
+</script>
+
+<!-- Footer Year Script -->
+<script>
+document.getElementById('y').textContent = new Date().getFullYear();
+</script>
+
+</body>
+</html>
